[project]
name = "data-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Romashov",email = "framebassman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.5.0,<5.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "poethepoet (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poe.tasks]
dev         = "jupyter notebook"
